--- a/style_PixelWorld.css
+++ b/style_PixelWorld.css
@@ -28,42 +28,58 @@ body {
 }
 
 
-/* Style the header with a grey background and some padding */
+
 .header {
     overflow: hidden;
-    background-color: #f1f1f1;
-    padding: 10px 10px;
+    background-color: #FCEDF5;
+    padding: 15px 10px;
 }
 
-/* Style the header links */
+
 .header a {
     float: left;
     color: black;
     text-align: center;
     height: 60px;
-    padding: 12px;
+    padding: 0px;
     text-decoration: none;
     font-size: 18px;
     line-height: 25px;
     border-radius: 4px;
 }
 
-/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+
+
+/*style for the imges*/
+.header a img{
+    float: left;
+    text-align: center;
+    height: 60px;
+    padding: 0px;
+    margin: 0;
+    text-decoration: none;
+    font-size: 18px;
+    
+    border-radius: 4px;
+    
+}
+
 .logo img{
     height: 100%;
     width: auto;         
     object-fit: contain;
 }
 .shop_login img{
-    height: 100%;
+    height: 70%;
     width: auto;      
     object-fit: contain;
 }
 
 
-/* Change the background color on mouse-over */
+
 .header a:hover {
-    background-color: #ddd;
+    background-color: #fef5fa;
+    transition: 0.2s ease-in;
     color: black;
 }
 
