--- a/style_PixelWorld.css
+++ b/style_PixelWorld.css
@@ -24,42 +24,50 @@
 
 body { 
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Jersey 10", "Pixelify Sans","Doto", sans-serif;
 }
 
+main{
+    min-height: 200rem;
+}
 
-
-.header {
+/*------------------------heder nr 1------------------------------------------*/
+.firts-header {
     overflow: hidden;
-    background-color: #FCEDF5;
+    background-color:#FCEDF5;
     padding: 15px 10px;
+    height: 7vw;
 }
 
 
-.header a {
+.firts-header a {
+    font:400 "Pixelify Sans";
     float: left;
-    color: black;
+    color: #6A1B9A;
     text-align: center;
-    height: 60px;
-    padding: 0px;
+    margin-right: 2vw;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 30px;
     line-height: 25px;
     border-radius: 4px;
 }
 
-
+.header-right span {
+    display: block;
+    float: left;
+    margin-right: 40vw;
+    overflow: hidden; 
+    padding-top: 1vw;
+}
 
 /*style for the imges*/
-.header a img{
+.firts-header a img{
     float: left;
     text-align: center;
     height: 60px;
     padding: 0px;
     margin: 0;
     text-decoration: none;
-    font-size: 18px;
-    
     border-radius: 4px;
     
 }
@@ -77,15 +85,101 @@ body {
 
 
 
-.header a:hover {
+.firts-header a:hover {
     background-color: #fef5fa;
     transition: 0.2s ease-in;
-    color: black;
+    color: #170C1C;
 }
 
 
 
-/* Float the link section to the right */
 .header-right {
     float: right;
+}
+
+
+/*-------------------header nr2-----------------------------------------*/
+.second-header {
+    position: sticky;
+    top: 0;
+    z-index: 1000;          /*chat gpt added so it would sit above*/
+    height: fit-content;
+    background-color:#3C1254;
+    font:400 "Pixelify Sans";
+    padding: 5px 10px;
+    box-shadow: 2px 2px 5px#170c1cab;
+    height: 5vw;
+}
+
+
+.second-header a {
+    float: left;
+    color: #FFFBFD;
+    text-align: center;
+    max-width: fit-content;
+    margin-right: 2vw;
+    text-decoration: underline;
+    font-size: 25px;
+    border-radius: 4px;
+}
+
+
+
+/*style for the logo*/
+.second-header a img{
+    float: left;
+    text-align: center;
+    height: 100%;
+    padding: 0px;
+    margin: 0;
+    height: 50px;
+    text-decoration: none;
+    font-size: 18px;
+    border-radius: 4px;
+}
+
+
+
+.logo img:hover {
+    transition: 0.2s ease-in;
+    background-color:#691b9a00;
+}
+
+.second-header a:hover {
+    background-color:#691b9a7d;
+    transition: 0.2s ease-in;
+    color: #C81515 ;
+}
+
+
+.header-rightSecond {
+    float: right;
+    padding-top: 1vw;
+    margin-right: 30vw;
+    overflow: hidden; 
+    
+}
+
+.header-rightSecond input {
+    float: left;
+    background-color:#6A1B9A;
+    border-width: 5px;
+    border-color: #DE7FE3;
+   
+
+}
+input::placeholder {
+    font-family: "Jersey 10" ;
+    font-size: 20px;
+    color: #C81515;
+    
+}
+.header-rightSecond img{
+    height: 2vw;
+
+}
+.header-rightSecond img:hover{
+    cursor: pointer;
+    transition: 0.5 linear;
+    height: 2.1vw;
 }
